# fanyi-rust-wasm

./: .gitignore  README.md
extension/: manifest.json
extension/js/: background.js  content.js
wasm_mod/: Cargo.toml
wasm_mod/src/: lib.rs
