[package]
name = "wasm_mod"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
wasm-bindgen-futures = { version = "0.4" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6" }
urlencoding = { version = "2.1" }
console_error_panic_hook = { version = "0.1" }
wee_alloc = { version = "0.4" }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3" }

[profile.release]
opt-level = 3

[package.metadata.wasp-pack.profile.release]
wasm-opt = false
